--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "template-client",
   "version": "0.1.0",
   "author": "Alex Arus",
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "scripts": {
     "setup": "cp config/example.env .env",
     "start": "react-scripts start",
@@ -24,21 +24,22 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
+    "template-common": "file:../common",
     "typeface-roboto": "^0.0.54",
     "typesafe-actions": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@material-ui/core": "^3.9.2",
-    "@storybook/addon-actions": "^5.0.1",
-    "@storybook/addon-links": "^5.0.1",
-    "@storybook/addons": "^5.0.1",
-    "@storybook/react": "^5.0.1",
+    "@storybook/addon-actions": "^5.0.3",
+    "@storybook/addon-links": "^5.0.3",
+    "@storybook/addons": "^5.0.3",
+    "@storybook/react": "^5.0.3",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
@@ -53,7 +54,7 @@
     "@types/storybook__react": "^4.0.1",
     "babel-loader": "^8.0.5",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.4000"
   },
   "eslintConfig": {
     "extends": "react-app"
