--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,10 +17,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "pretty": true
   },
   "include": [
-    "src"
+    "src",
+    "node_modules/template-common"
   ],
   "exclude": [
     "node_modules",
