--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "@types/storybook__react": "^4.0.1",
     "babel-loader": "^8.0.5",
     "tslint": "^5.14.0",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.3.4000"
   },
   "eslintConfig": {
