--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
@@ -33,6 +34,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
