--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "homepage": "https://gitlab.com/alex.arus/template",
   "repository": "https://gitlab.com/alex.arus/template.git",
   "scripts": {
-    "setup": "cd ./common && yarn && cd ../client && yarn && cd ../server && yarn",
+    "setup": "cd ./common && yarn add file:../common && yarn && cd ../client && yarn add file:../common && yarn && cd ../server && yarn add file:../common && yarn",
     "build": "cd ./common && yarn build && cd ../client && yarn build && cd ../server && yarn build",
     "start": "cd ./server && yarn start && cd ../client && yarn start"
   }
