--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
-    "template-common": "file:../common/",
+    "template-common": "file:../common",
     "typeface-roboto": "^0.0.54",
     "typesafe-actions": "^4.0.0"
   },
@@ -57,7 +57,6 @@
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__react": "^4.0.1",
-    "babel-loader": "^8.0.5",
     "tslint": "^5.14.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.4.5"
