--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,9 @@
     "script:initializeModule": "npx ts-node --skip-project ./scripts/initializeModule"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.0.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
