--- a/client/package.json
+++ b/client/package.json
@@ -26,10 +26,12 @@
     "@material-ui/styles": "^4.0.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
     "loglevel": "^1.6.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-leaflet": "^2.3.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
@@ -53,6 +55,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
+    "@types/react-leaflet": "^2.2.1",
     "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.2",
     "@types/storybook__addon-actions": "^3.4.2",
