--- a/client/config/example.env
+++ b/client/config/example.env
@@ -11,6 +11,8 @@ REACT_APP_ROUTER_PREFIX=
 REACT_APP_API_URL=
 # API request timeout
 REACT_APP_API_REQUEST_TIMEOUT=
+# API request debounce
+REACT_APP_API_REQUEST_DEBOUNCE=
 
 ###########################################################################
 # Development server configuration
