--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__react": "^4.0.1",
+    "babel-loader": "8.0.5",
     "tslint": "^5.14.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.4.5"
