--- a/client/package.json
+++ b/client/package.json
@@ -22,38 +22,38 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.0.1",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/icons": "^4.0.1",
     "@material-ui/styles": "^4.0.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
-    "loglevel": "^1.6.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "loglevel": "^1.6.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-leaflet": "^2.3.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
-    "template-common": "file:../common",
+    "template-common": "file:../common/",
     "typeface-roboto": "^0.0.54",
-    "typesafe-actions": "^4.0.0"
+    "typesafe-actions": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@storybook/addon-actions": "^5.0.7",
-    "@storybook/addon-links": "^5.0.7",
-    "@storybook/addons": "^5.0.7",
-    "@storybook/react": "^5.0.7",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "@types/classnames": "^2.2.7",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.123",
     "@types/loglevel": "^1.5.4",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.8.8",
+    "@types/node": "^12.0.4",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.2",
     "@types/react-leaflet": "^2.2.1",
     "@types/react-redux": "^7.0.3",
@@ -62,9 +62,9 @@
     "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__react": "^4.0.1",
     "babel-loader": "8.0.5",
-    "tslint": "^5.14.0",
+    "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
   "eslintConfig": {
     "extends": "react-app"
