--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,7 @@
   "main": "index.ts",
   "scripts": {
     "setup": "cp config/example.env .env",
-    "development:build": "tsc --build --watch ./config/development.tsconfig.json",
-    "development:start": "npx nodemon 'build/development/index.js' --watch 'build/development'",
-    "start": "npx concurrently -p '[{time} {name}]' -t 'HH:mm:ss' -c 'yellow.bold,green.bold' 'npm:development:build' 'npm:development:start'",
+    "start": "ts-node-dev --project ./config/development.tsconfig.json src/index.ts",
     "build": "rm -r -f build && tsc --build ./config/production.tsconfig.json",
     "lint": "tslint -c tslint.json -t stylish 'src/**/*.ts'",
     "lint:fix": "tslint -c tslint.json -t stylish 'src/**/*.ts' --fix",
@@ -38,9 +36,10 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.132",
+    "@types/lodash": "^4.14.133",
     "@types/node": "^12.0.4",
     "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
   }
