--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.133",
     "@types/node": "^12.0.4",
+    "jest": "^24.8.0",
     "ts-node": "^8.2.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.17.0",
