--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,13 @@
     "@material-ui/icons": "^4.0.1",
     "@material-ui/styles": "^4.0.1",
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
     "loglevel": "^1.6.2",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-leaflet": "^2.3.0",
     "react-redux": "^7.0.3",
