--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "template",
   "version": "0.0.1",
   "author": {
-    "name": "Alex Arus",
-    "email": "mr.alex.arus@gmail.com"
+    "name": "Alexander Selivanof",
+    "email": "alexander.v.selivanov@gmail.com"
   },
   "license": "GPL-3.0",
   "description": "Application template (TypeScript, ReactJs, Redux, Redux-Saga, ExpressJs, TypeORM)",
   "homepage": "https://gitlab.com/alex.arus/template",
-  "repository": "https://gitlab.com/alex.arus/template.git",
-  "scripts": {
-    "setup": "cd ./common && yarn add file:../common && yarn && cd ../client && yarn add file:../common && yarn && cd ../server && yarn add file:../common && yarn",
-    "build": "cd ./common && yarn build && cd ../client && yarn build && cd ../server && yarn build",
-    "start": "cd ./server && yarn start && cd ../client && yarn start"
-  }
+  "repository": "https://gitlab.com/alex.arus/template.git"
 }
