--- a/client/package.json
+++ b/client/package.json
@@ -21,52 +21,52 @@
     "script:initializeModule": "npx ts-node --skip-project ./scripts/initializeModule"
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.1",
-    "@material-ui/icons": "^4.0.1",
-    "@material-ui/styles": "^4.0.1",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "leaflet": "^1.5.1",
-    "lodash": "^4.17.11",
-    "loglevel": "^1.6.2",
-    "react": "^16.8.6",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.8.6",
-    "react-leaflet": "^2.3.0",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2",
+    "lodash": "^4.17.15",
+    "loglevel": "^1.6.4",
+    "react": "^16.10.2",
+    "react-chartjs-2": "^2.8.0",
+    "react-dom": "^16.10.2",
+    "react-leaflet": "^2.4.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "reselect": "^4.0.0",
     "template-common": "file:../common/",
-    "typeface-roboto": "^0.0.54",
-    "typesafe-actions": "^4.4.0"
+    "typeface-roboto": "^0.0.75",
+    "typesafe-actions": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "@types/classnames": "^2.2.7",
-    "@types/jest": "^24.0.13",
-    "@types/lodash": "^4.14.123",
-    "@types/loglevel": "^1.5.4",
-    "@types/node": "^12.0.4",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-leaflet": "^2.2.1",
-    "@types/react-redux": "^7.0.3",
-    "@types/react-router-dom": "^4.3.2",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-links": "^3.3.4",
-    "@types/storybook__react": "^4.0.1",
-    "babel-loader": "8.0.5",
-    "tslint": "^5.17.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.5.2"
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "@types/classnames": "^2.2.9",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.141",
+    "@types/loglevel": "^1.6.3",
+    "@types/node": "^12.7.11",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-leaflet": "^2.4.0",
+    "@types/react-redux": "^7.1.4",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/storybook__addon-actions": "^3.4.3",
+    "@types/storybook__addon-links": "^3.3.5",
+    "@types/storybook__react": "^4.0.2",
+    "babel-loader": "^8.0.6",
+    "tslint": "^5.20.0",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.3"
   },
   "eslintConfig": {
     "extends": "react-app"
